# code_genie

./: Cargo.toml  config.toml.example
moling/: .gitignore  README.md  analyze-duplicates-by-cluster.pl  analyze-duplicates-by-cluster.sh  analyze-results-of-batch-test-weights.sh  batch-test-weights.sh  batch-test-weights.txt  chaifen-all.txt  chaifen.txt  config-amhb.toml  config.toml  config.toml.tmpl  convert-yuling-rime-schema-to-moling.sh  freq.txt  generate-root-chart.sh  input-division.txt  input-fixed.txt  key_distribution.txt  optimize.sh  pair_equivalence.txt  prepare-inputs.sh  roots-cluster.txt  roots-fly-candidates.txt  roots-freq.txt  roots-pinyin.txt  roots.txt  stat-moling-roots.pl
moling/output-20260420-025225/: output-distribution.txt  output-keymap.txt  summary.txt
moling/output-20260420-025225/thread-00/: output-combined.txt  output-distribution.txt  output-encode.txt  output-equiv-dist.txt  output-keymap.txt
moling/output-20260420-025225/thread-01/: output-combined.txt  output-distribution.txt  output-encode.txt  output-equiv-dist.txt  output-keymap.txt
moling/output-20260420-025225/thread-02/: output-combined.txt  output-distribution.txt  (+3 more)
moling/output-20260427-232905/: COMMENT.txt  output-combined.txt  output-distribution.txt  output-encode.txt  output-keymap.txt  summary.txt  魔灵V2算码指标汇总.txt
moling/output-20260506-000635/: COMMENT.txt  output-combined.txt  output-keymap.txt  summary.txt  魔灵V3.1算码指标汇总.txt
src/: annealing.rs  config.rs  context.rs  evaluator.rs  loader.rs  main.rs  output.rs  simple.rs  types.rs
src/amhb/: optimizer.rs
(+149 files in other folders)
