[package]
name = "code_genie"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
rand = { version = "0.10" }
rayon = "1.12"
hashbrown = "0.17"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "code_genie"
path = "src/main.rs"
